--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,5 @@ fabric.properties
 .idea/codestream.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm,laravel
+
+.DS_Store
